src/test/deca/syntax/invalid/extension/TabSansNew.deca
// Description:
//    Tableau sans new
//

{
    int[] a = float[];
}

